--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <title>Smoothie delight.</title>
   <meta charset="UTF-8">
+  <meta name="description" content="New HEALTHY smoothie - smoothie Delight">
+  <meta name="keywords" content="smoothie, delicious ,lose weight ,add muscle, healthy">
+  <meta name="author" content="Smoothie Delight">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="smoothieDelight.png" >
@@ -22,17 +25,17 @@
         <g >
           <g >
             <path class="pathBottle" d="M527.09,1.5c3.27,3.81,4.08,8.2,4,13.18-.29,11.38-.24,22.77,0,34.15.09,4.88-1,8.93-5.25,11.64-3.1,2-3.22,4.55-2.9,8,4.22,46.59,18.61,90.23,37.5,132.71,13.42,30.19,18.38,62.19,18.38,95.08q0,136.6.06,273.19c0,21.37-13.64,35-34.95,35q-81.55.07-163.09,0c-21.31,0-34.94-13.62-35-35,0-89.49.28-179-.1-268.48-.17-39.46,7.19-77.1,23.76-112.86,17.79-38.42,28-78.81,32.45-120.79.31-2.88-.15-4.94-2.62-6.48-4.72-2.93-5.83-7.31-5.7-12.63.26-11.18.28-22.38,0-33.56-.13-5,.68-9.37,4-13.18Z" />
-            <text class="text text-g4" transform="translate(772.58 283.24)">DELICIOUS</text>
-            <text class="text text-g3" transform="translate(0 403.24)" >LOSE WEIGHT</text>
-            <text class="text text-g2" transform="translate(645.54 441.24)">ADD MUSCLE</text>
-            <text class="text text-g1" transform="translate(50.54 548.58)">HEALTHY</text>
-            <path class="wave wave-g3 " id="wave1" />
+            <text id="text--delicious" class="text text-g4" transform="translate(772.58 283.24)">DELICIOUS</text>
+            <text id="text--weight" class="text text-g3" transform="translate(0 403.24)" >LOSE WEIGHT</text>
+            <text id="text-muscle" class="text text-g2" transform="translate(645.54 441.24)">ADD MUSCLE</text>
+            <text id="text--healthy" class="text text-g1" transform="translate(50.54 548.58)">HEALTHY</text>
+            <path class="wave wave-g3 " id="wave--delicious" />
             <path class="wave wave-g2 " id="wave2" />
-            <path class="wave wave-g5 " id="wave3" />
+            <path class="wave wave-g5 " id="wave--weight" />
             <path class="wave wave-g1 " id="wave4" />
-            <path class="wave wave-g2 " id="wave5" />
+            <path class="wave wave-g2 " id="wave--muscle" />
             <path class="wave wave-g5 " id="wave6" />
-            <path class="wave wave-g1 " id="wave7" />
+            <path class="wave wave-g1 " id="wave--health" />
             <line class="wave wave-g5" x1="345" y1="416" y2="416" />
             <line class="wave wave-g6" x1="804" y1="454" x2="577" y2="454" />
             <line class="wave wave-g3" x1="580" y1="295" x2="905" y2="295" />
